branch-aktualisierung-contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,176 @@
     <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
+
 <body>
-    
+    <main>
+        <section class="header-sec">
+            <div class="img-div">
+                <img class="null-img"" src=" ./assets/img/Contact-Header.jpg" alt="bild">
+            </div>
+            <div class="text-div-flex">
+                <div class="head-text-h1">
+                    <h1>B®/</h1>
+                    <h1>CONTACT</h1>
+                    <p>EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©</p>
+                </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <div class="head-text-div-flex">
+
+                    <div class="punkt">
+                    </div>
+                    <div class="head-4-div-text">
+                        <div class="head-text-2-div">
+                            <div>
+                                <h4>NEW BUSINESS</h4>
+                                <p>hi@mail.com</p>
+                            </div>
+                            <br><br><br>
+                            <div>
+                                <h4>PRESS</h4>
+                                <p>hi@mail.com</p>
+                            </div>
+                        </div>
+                        <div class="head-text-2-div">
+                            <div>
+                                <h4>GENERAL</h4>
+                                <p>hi@mail.com</p>
+                            </div>
+                            <div>
+                                <h4>JOIN US</h4>
+                                <p>hi@mail.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <Hr>
+        <section>
+            <article>
+                <div class="sec2-div-row-flex">
+                    <div class="sec2-2-div-row-flex">
+                        <p>SEC.</p>
+                        <p>/A</p>
+                    </div>
+
+                    <div class="punkt-klein"></div>
+                </div>
+            </article>
+            <article>
+                <div class="office-div-flex">
+                    <div>
+                        <h3>OFFICES</h3>
+                    </div>
+                    <div>
+                        <div class="office-sec-div">
+                            <hr>
+                            <div>
+
+                                <div>
+                                    <img src="./assets/img/SD.jpg" alt="bild">
+                                </div>
+                                <div class="p-div">
+                                    <p class="links">01</p>
+                                    <p class="rechts">/03</p>
+                                </div>
+                            </div>
+                            <div>
+                                <h4 class="san">SAN DIEGO (HQ)</h4>
+                            </div>
+                        </div>
+                        <div class="office-sec-div">
+                            <hr>
+                            <div class="border-left">
+                                <hr class="line">
+                                <div>
+                                    <img src="./assets/img/mtv.jpg" alt="bild">
+                                </div>
+                                <div class="p-div">
+                                    <p class="links">02</p>
+                                    <p class="rechts">/03</p>
+                                </div>
+                            </div>
+                            <div>
+                                <h4 class="san">BAY AREA</h4>
+                            </div>
+                        </div>
+                        <div class="office-sec-div">
+                            <hr>
+                            <div>
+                                <hr>
+                                <div>
+                                    <img src="./assets/img/stl.jpg" alt="bild">
+                                </div>
+                                <div class="p-div">
+                                    <p class="links">03</p>
+                                    <p class="rechts">/03</p>
+                                </div>
+                                <hr>
+                            </div>
+                            <div>
+                                <h4 class="san">ST. LOUIS</h4>
+                            </div>
+                        </div>
+                    </div>
+            </article>
+        </section>
+        <section>
+            <article>
+                <div class="sec2-div-row-flex">
+                    <div class="sec2-2-div-row-flex">
+                        <p>SEC.</p>
+                        <p>/B</p>
+                    </div>
+
+                    <div class="punkt-klein"></div>
+                </div>
+            </article>
+            <article>
+                <div class="sec3-div-row-flex">
+                    <div>
+                        <h3>FOLLOW</h3>
+                    </div>
+                    <div>
+                        <h3>Social</h3>
+                        <ul class="a-list">
+                            <a href="#">
+                                <li>
+                                    Instagram
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li>
+                                    Twitter
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li>
+                                    Linkedin
+                                </li>
+                            </a>
+                            <a href="#">
+                                <li>
+                                    Facebook
+                                </li>
+                            </a>
+
+                        </ul>
+                    </div>
+                    <div>
+                        <p class="h3-small">STAY IN THE KNOW</p>
+                        <form action="">
+                            <input class="borderless" type="email" name="mail" id="" required
+                                placeholder="Emai Address">
+                        </form>
+                    </div>
+
+                </div>
+            </article>
+
+        </section>
+    </main>
+
+
 </body>
+
 </html>
