--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav__header">
             <a href="#">WORK</a>
-            <a href="#">ABOUT</a>
+            <a href="./about.html">ABOUT</a>
             <a href="#">NEWS</a>
             <a href="#">THINKING</a>
             <a href="#">CONTACT</a>
@@ -100,7 +100,7 @@
                 <h2>BASIC® HELPS BRANDS <span></span>CONNECT
                     W/ CULTURE</h2>
                 <p>ADWEEK <span>(AGENCY SPOTLIGHT)</span></p>
-                <a href="#">ABOUT US</a>
+                <a href="./about.html">ABOUT US</a>
             </div>
             <video src="./assets/img/Culture.mp4" autoplay muted loop></video>
         </section>
