section eins fertig gestellt und trennlinie designet

--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,13 @@
     <main>
         <section class="header-sec">
             <div class="img-div">
-                <img class="null-img"" src=" ./assets/img/Contact-Header.jpg" alt="bild">
+                <img class="null-img" src=" ./assets/img/Contact-Header.jpg" alt="bild">
             </div>
             <div class="text-div-flex">
                 <div class="head-text-h1">
-                    <h1>B®/</h1>
-                    <h1>CONTACT</h1>
+                    <h1>B®/ CONTACT</h1>
                     <p>EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©</p>
-                </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
                 <div class="head-text-div-flex">
 
                     <div class="punkt">
@@ -33,7 +32,6 @@
                                 <h4>NEW BUSINESS</h4>
                                 <p>hi@mail.com</p>
                             </div>
-                            <br><br><br>
                             <div>
                                 <h4>PRESS</h4>
                                 <p>hi@mail.com</p>
@@ -54,17 +52,12 @@
             </div>
         </section>
         <Hr>
-        <section>
-            <article>
-                <div class="sec2-div-row-flex">
-                    <div class="sec2-2-div-row-flex">
-                        <p>SEC.</p>
-                        <p>/A</p>
-                    </div>
-
-                    <div class="punkt-klein"></div>
-                </div>
-            </article>
+        <div class="sec2-2-div-row-flex">
+            <p>SEC.</p>
+            <p>/A</p>
+            <div class="punkt-klein"></div>
+        </div>
+        <!-- <section>
             <article>
                 <div class="office-div-flex">
                     <div>
@@ -123,7 +116,7 @@
                     </div>
             </article>
         </section>
-        <section>
+         <section>
             <article>
                 <div class="sec2-div-row-flex">
                     <div class="sec2-2-div-row-flex">
@@ -176,7 +169,7 @@
                 </div>
             </article>
 
-        </section>
+        </section> -->
     </main>
 
 
