section 1 completed, section 2 initialization completed

--- a/work.html
+++ b/work.html
@@ -9,7 +9,30 @@
 </head>
 <body>
     <main>
-        
+        <section class="sc__work">
+            <h1>EASY TO
+                UNDERSTAND.
+                ●IMPOSSIBLE
+                TO IGNORE.</h1>
+                <p class="p__top">
+                    The work we create lives at the intersection of clarity and surprise and positions brands in culture through shared values and ideals.
+                </p>
+        </section>
+        <section>
+            <article>
+                <h3>BRANDED ECOMMERCE</h3>
+                <p>
+                    We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.
+                </p>
+                <a href="#">Learn More</a>
+            </article>
+            <article>
+                
+            </article>
+            <article>
+
+            </article>
+        </section>
     </main>
 </body>
 </html>
