--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <p>EASY TO UNDERSTAND, IMPOSSIBLE TO IGNORE.™</p>
             <a href="#">TERMS, PRIVACY POLICY</a>
         </section>
+        <!-- ! Test -->
     </footer>
 </body>
 
