erneuten aktualisierung korektur

--- a/contact.html
+++ b/contact.html
@@ -57,66 +57,62 @@
             <p>/A</p>
             <div class="punkt-klein"></div>
         </div>
-        <!-- <section>
-            <article>
-                <div class="office-div-flex">
+        <section class="office-div-flex">
+            <div class="ofi-div">
+                <h3>OFFICES</h3>
+            </div>
+            <hr class="line">
+            <div class="divdiv">
+                <div class="office-sec-div">
                     <div>
-                        <h3>OFFICES</h3>
+                        <div>
+                            <img src="./assets/img/SD.jpg" alt="bild">
+                        </div>
+                        <div class="p-div">
+                            <p class="links">01</p>
+                            <p class="rechts">/03</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="office-sec-div">
-                            <hr>
-                            <div>
+                        <h4 class="san">SAN DIEGO (HQ)</h4>
+                    </div>
+                </div>
+                <hr class="line2">
+                <div class="office-sec-div">
+                    <div class="border-left">
+                        <div>
+                            <img src="./assets/img/mtv.jpg" alt="bild">
+                        </div>
+                        <div class="p-div">
+                            <p class="links">02</p>
+                            <p class="rechts">/03</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="san">BAY AREA</h4>
+                    </div>
+                </div>
+                <hr class="line2">
+                <div class="office-sec-div">
+                    <div>
 
-                                <div>
-                                    <img src="./assets/img/SD.jpg" alt="bild">
-                                </div>
-                                <div class="p-div">
-                                    <p class="links">01</p>
-                                    <p class="rechts">/03</p>
-                                </div>
-                            </div>
-                            <div>
-                                <h4 class="san">SAN DIEGO (HQ)</h4>
-                            </div>
+                        <div>
+                            <img src="./assets/img/stl.jpg" alt="bild">
                         </div>
-                        <div class="office-sec-div">
-                            <hr>
-                            <div class="border-left">
-                                <hr class="line">
-                                <div>
-                                    <img src="./assets/img/mtv.jpg" alt="bild">
-                                </div>
-                                <div class="p-div">
-                                    <p class="links">02</p>
-                                    <p class="rechts">/03</p>
-                                </div>
-                            </div>
-                            <div>
-                                <h4 class="san">BAY AREA</h4>
-                            </div>
+                        <div class="p-div">
+                            <p class="links">03</p>
+                            <p class="rechts">/03</p>
                         </div>
-                        <div class="office-sec-div">
-                            <hr>
-                            <div>
-                                <hr>
-                                <div>
-                                    <img src="./assets/img/stl.jpg" alt="bild">
-                                </div>
-                                <div class="p-div">
-                                    <p class="links">03</p>
-                                    <p class="rechts">/03</p>
-                                </div>
-                                <hr>
-                            </div>
-                            <div>
-                                <h4 class="san">ST. LOUIS</h4>
-                            </div>
-                        </div>
+                       
                     </div>
-            </article>
+                    
+                    <div>
+                        <h4 class="san">ST. LOUIS</h4>
+                    </div>
+                </div> <hr class="line2">
+            </div>
         </section>
-         <section>
+        <section>
             <article>
                 <div class="sec2-div-row-flex">
                     <div class="sec2-2-div-row-flex">
