--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <Hr>
-        <div class="sec2-2-div-row-flex">
+        <div class="sec3-2-div-row-flex">
             <p>SEC.</p>
             <p>/A</p>
             <div class="punkt-klein"></div>
@@ -109,20 +109,21 @@
                     <div>
                         <h4 class="san">ST. LOUIS</h4>
                     </div>
-                </div> <hr class="line2">
+                </div> 
+                <hr class="line2">
             </div>
         </section>
         <section>
-            <article>
-                <div class="sec2-div-row-flex">
-                    <div class="sec2-2-div-row-flex">
+            <hr class="line3">
+                <div class="sec3-2-div-row-flex">
+
                         <p>SEC.</p>
                         <p>/B</p>
-                    </div>
+
 
                     <div class="punkt-klein"></div>
                 </div>
-            </article>
+
             <article>
                 <div class="sec3-div-row-flex">
                     <div>
@@ -160,12 +161,14 @@
                             <input class="borderless" type="email" name="mail" id="" required
                                 placeholder="Emai Address">
                         </form>
+                        <hr>
                     </div>
+                    
 
                 </div>
-            </article>
+            </article> 
 
-        </section> -->
+        </section> 
     </main>
 
 
