--- a/work.html
+++ b/work.html
@@ -18,21 +18,28 @@
                     The work we create lives at the intersection of clarity and surprise and positions brands in culture through shared values and ideals.
                 </p>
         </section>
-        <section>
-            <article>
-                <h3>BRANDED ECOMMERCE</h3>
-                <p>
-                    We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.
-                </p>
-                <a href="#">Learn More</a>
+        <section class="sc__over">
+            <article class="article__left article__settings">
+                <p class="p__date">01/04</p>
+                <div class="div__left">
+                    <h3>BRANDED ECOMMERCE</h3>
+                    <p>
+                        We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
             </article>
-            <article>
-                
+            <hr>
+            <article class="article__right article__settings">
+                <video src="./assets/img/Google-Store.mp4" loop autoplay muted></video>
+                <h4 class="h4__article-description">Google Store</h4>
+                <p class="p__article-description">An eCommerce experience helping Google bring its hardware to people across the globe</p>
             </article>
-            <article>
-
+            <article class="article__right article__settings">
+                <img src="./assets/img/Beats.jpg" alt="">
+                <h4 class="h4__article-description">Beats by Dre</h4>
+                <p class="p__article-description">Engineering a digital destination that moves at the speed of culture</p>
             </article>
-            
         </section>
     </main>
 </body>
