all components integrated

--- a/work.html
+++ b/work.html
@@ -18,6 +18,8 @@
                     The work we create lives at the intersection of clarity and surprise and positions brands in culture through shared values and ideals.
                 </p>
         </section>
+
+        <!-- ! Section 1 -->
         <section class="sc__over">
             <article class="article__left article__settings">
                 <p class="p__date">01/04</p>
@@ -39,6 +41,85 @@
                 <img src="./assets/img/Beats.jpg" alt="">
                 <h4 class="h4__article-description">Beats by Dre</h4>
                 <p class="p__article-description">Engineering a digital destination that moves at the speed of culture</p>
+            </article>
+        </section>
+
+        <!-- ! Section 2 -->
+        <section class="sc__over">
+            <article class="article__left article__settings">
+                <p class="p__date">02/04</p>
+                <div class="div__left">
+                    <h3>DIGITAL
+                        PRODUCTS+
+                        SERVICES</h3>
+                    <p>
+                        We identify and create digital products and services that create revenue channels and help brands thrive in the new economy.
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
+            </article>
+            <hr>
+            <article class="article__right article__settings">
+                <img src="./assets/img/Fender.jpg" alt="">
+                <h4 class="h4__article-description">Fender Academy</h4>
+                <p class="p__article-description">A web service to make sales training feel less like work and more like play</p>
+            </article>
+            <article class="article__right article__settings">
+                <img src="./assets/img/AMEX.jpg" alt="">
+                <h4 class="h4__article-description">American Express</h4>
+                <p class="p__article-description">Laying a design foundation for future products and services with the OPEN app</p>
+            </article>
+        </section>
+
+        <!-- ! Section 3 -->
+        <section class="sc__over">
+            <article class="article__left article__settings">
+                <p class="p__date">03/04</p>
+                <div class="div__left">
+                    <h3>WEBSITES +
+                        PLATFORMS</h3>
+                    <p>
+                        We conceive and create experiences that immerse consumers in the brand through a combination of utility and creativity.
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
+            </article>
+            <hr>
+            <article class="article__right article__settings">
+                <img src="./assets/img/Riot.jpg" alt="">
+                <h4 class="h4__article-description">Riot Games</h4>
+                <p class="p__article-description">Revitalizing the Riot Games brand with an upgraded digital experience</p>
+            </article>
+            <article class="article__right article__settings">
+                <img src="./assets/img/Softbank.jpg" alt="">
+                <h4 class="h4__article-description">Softbank Vision Fund</h4>
+                <p class="p__article-description">Building a digital destination for the leading tech investment fund</p>
+            </article>
+        </section>
+
+        <!-- ! Section 4 -->
+        <section class="sc__over">
+            <article class="article__left article__settings">
+                <p class="p__date">04/04</p>
+                <div class="div__left">
+                    <h3>BRANDING +
+                        ADVERTISING</h3>
+                    <p>
+                        We create identities, platforms, and activations that differentiate brands and position them to matter in culture.
+                    </p>
+                    <a href="#">Learn More</a>
+                </div>
+            </article>
+            <hr>
+            <article class="article__right article__settings">
+                <img src="./assets/img/NERD.jpg" alt="">
+                <h4 class="h4__article-description">NERD Skincare</h4>
+                <p class="p__article-description">Developing a brand that brought science to beauty in bold, unexpected ways</p>
+            </article>
+            <article class="article__right article__settings">
+                <img src="./assets/img/Beats.jpg" alt="">
+                <h4 class="h4__article-description">Brixton</h4>
+                <p class="p__article-description">Honoring the past to build the future of the Brixton brand</p>
             </article>
         </section>
     </main>
